# SING_3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clear_linux.py  run_program_linux.py
outputs/: persistence_A.csv
outputs/persistence/: 50pts.csv  A2.csv  A3.csv  A5.csv  genus_2.csv  mecanics.csv  non_connex.csv  persistence.csv  row_cube.csv  teaser.csv  test_cluster_2.csv  test_cluster_3.csv  test_clustering.csv
python/: visu.py
src/: distances.cpp  distances.h  io.cpp  io.h  io_sing.cpp  io_sing.h  main.cpp  utils.cpp  utils.h
